--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.4",
-        "symfony/framework-bundle": ">=2.1,<2.2-dev",
+        "symfony/framework-bundle": ">=2.1,<2.4",
         "sensio/framework-extra-bundle": "*",
         "doctrine/doctrine-bundle": "*",
         "doctrine/orm": "*",
