--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -43,3 +43,11 @@ asbo_whoswho_addressing_update:
     defaults:
         _controller: asbo.controller.frontend.addressing:updateAction
         _method: GET|POST
+
+asbo_whoswho_addressing_delete:
+    pattern:  /fra/{slug}/addresses/{address_id}/delete
+    requirements:
+        address_id: \d+
+    defaults:
+        _controller: asbo.controller.frontend.addressing:deleteAction
+        _method: GET|POST
