--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "lexik/form-filter-bundle":         "1.2.*",
         "stof/doctrine-extensions-bundle":  "1.1.*",
         "nelmio/alice":                     "1.4.*",
+        "sonata-project/admin-bundle":      "2.*",
         "asbo/resource-bundle":             ">=0.1.6"
     },
     "require-dev": {
